Fixed chat bubble alignment

--- a/frontend/src/Components/css/Chat.css
+++ b/frontend/src/Components/css/Chat.css
@@ -44,6 +44,7 @@
 
 .input-container {
     display: flex;
+    position: relative;
     padding: 10px;
     border-radius: 100px;
 }
@@ -54,7 +55,15 @@
     border-radius: 20px;
     border: 2px solid rgba(0, 0, 0, 0.5);
     text-align: left;
-    padding-left: 20px;
-    font-size: 30px;
+    padding-left: 50px;
+    padding-right: 60px;
+    font-size: 40px;
     font-family: 'CustomFont', sans-serif; 
+}
+
+.send-button {
+    position: absolute;
+    right: 50px;
+    top: 0;
+    height: 100%;
 }
