--- a/frontend/src/Components/css/SendMessage.css
+++ b/frontend/src/Components/css/SendMessage.css
@@ -4,3 +4,8 @@
     padding: 0;
     cursor: pointer;
 }
+
+.send-button-image {
+    width: 40px; /* Adjust as needed */
+    height: 40px; /* Adjust as needed */
+}
